# colortracking

./: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  Makefile  README.dataset.txt  README.roboflow.txt  auto.sh  cmake_install.cmake  colorPicker.cpp  data.yaml  main.cpp  main_thread.cpp  maksMaker.cpp  rgb_camera_control.cpp  runner.py  testing.cpp  testing2.cpp  thresholds.json
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/labels/: image_1717269026-0923624_jpg.rf.70a4df58442c5c791737a5bcafdaf953.txt  image_1717269032-9712324_jpg.rf.e9baf419b24879068a5931440975560a.txt  image_1717269137-6107152_jpg.rf.79c1b9dc41497ee8dcd521d64cfddc5c.txt  image_1717269202-5326173_jpg.rf.4fa2e4efe9093a06ac2dac0e487fbebd.txt  image_1717269211-3216245_jpg.rf.5a76276301ccd496798d9e132cd201a6.txt  image_1717269374-337941_jpg.rf.0863a73936129887d0c4ee941c6070a0.txt  image_1717269380-83558_jpg.rf.61bcea152bddf01e2461fe0b7714154b.txt  image_1717269525-5852027_jpg.rf.67c02cf7844e415a3bbc64596d4126ce.txt  image_1717269533-4792876_jpg.rf.fae220e7f400c8b73bf01446aa7221d0.txt  image_1717269699-7594106_jpg.rf.2559d9ab728447427083ad471a0899c7.txt  image_1717269713-8986182_jpg.rf.8f0b97d464db274fd2435c8d3ec31762.txt  image_1717269720-2465022_jpg.rf.f631190511aab68dd4fde0afe60d0079.txt  image_1717269725-8687942_jpg.rf.d57bc43eaa442fa31718099a80a519ae.txt  image_1717269948-080034_jpg.rf.a73b6085255aa7fd0c3acd8129a34f4d.txt  image_1717270220-351327_jpg.rf.ecafa80789034aa1a143e45cee5ead99.txt  (+85 more)
